# carla_diff_drive_bridge

./: README.md  package.xml  setup.cfg  setup.py
carla_diff_drive_bridge/: bridge_node.py  spawn_robot.py
config/: bridge_params.yaml
launch/: diff_drive_bridge.launch.py
