<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_diff_drive_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between ROS2 cmd_vel (Twist) and CARLA actor kinematic control for differential drive robots</description>
  <maintainer email="yuhan@example.com">Yuhan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
